--- a/configs/platform-v7a_noneon/barebox-at91.config
+++ b/configs/platform-v7a_noneon/barebox-at91.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.03.0 Configuration
+# Barebox/arm 2025.11.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -43,7 +43,7 @@ CONFIG_HAVE_AT91_USB_CLK=y
 CONFIG_COMMON_CLK_AT91=y
 CONFIG_HAVE_AT91_SMD=y
 CONFIG_HAVE_AT91_DDRAMC=y
-CONFIG_AT91_MCI_PBL=y
+CONFIG_AT91_PBL=y
 CONFIG_AT91SAM9_SMC=y
 CONFIG_HAVE_AT91SAM9_RST=y
 CONFIG_SOC_SAM_V7=y
@@ -71,7 +71,6 @@ CONFIG_MACH_MICROCHIP_SAMA5D3_EDS=y
 #
 CONFIG_BOARD_ARM_GENERIC_DT=y
 CONFIG_AEABI=y
-# CONFIG_ARM_BOARD_APPEND_ATAG is not set
 # end of System Type
 
 # CONFIG_64BIT is not set
@@ -82,12 +81,15 @@ CONFIG_32BIT=y
 #
 CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_ARM_EXCEPTIONS=y
+# CONFIG_ARM_EXCEPTIONS_PBL is not set
 CONFIG_ARM_UNWIND=y
+CONFIG_ARM_MMU_PERMISSIONS=y
 # CONFIG_ARM_SEMIHOSTING is not set
 # CONFIG_ARM_PSCI_CLIENT is not set
+# CONFIG_BOOT_ATAGS is not set
+# CONFIG_ARM_BOOTM_ELF is not set
+# CONFIG_ARM_BOOTM_FIP is not set
 # end of ARM specific settings
-
-CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
 
 #
 # General architecture-dependent options
@@ -96,15 +98,23 @@ CONFIG_BOARD_GENERIC_DT=y
 # CONFIG_BOARD_GENERIC_FIT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_DMA_WRITE_COMBINE=y
+CONFIG_ARCH_HAS_STACK_DUMP=y
+CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
+CONFIG_ARCH_HAS_ZERO_PAGE=y
+CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_HAVE_ARCH_BOOTM_OFTREE=y
+CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
+CONFIG_ARCH_HAS_SJLJ=y
+CONFIG_HAS_DEBUG_LL=y
+CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=140201
 CONFIG_CLANG_VERSION=0
 CONFIG_GREGORIAN_CALENDER=y
 CONFIG_HAS_KALLSYMS=y
 CONFIG_HAS_MODULES=y
-CONFIG_HAS_CACHE=y
 CONFIG_HAS_DMA=y
-CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_GENERIC_GPIO=y
 CONFIG_BLOCK=y
 CONFIG_BLOCK_WRITE=y
@@ -113,6 +123,7 @@ CONFIG_BINFMT=y
 CONFIG_UIMAGE=y
 CONFIG_LOGBUF=y
 CONFIG_STDDEV=y
+CONFIG_CDEV_ALIAS=y
 CONFIG_UBIFORMAT=y
 CONFIG_BOOT=y
 CONFIG_FASTBOOT_BASE=y
@@ -120,10 +131,9 @@ CONFIG_FASTBOOT_BASE=y
 #
 # General Settings
 #
+CONFIG_NAME=""
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_HAS_INSECURE_DEFAULTS=y
-CONFIG_INSECURE=y
 CONFIG_BANNER=y
 CONFIG_MEMINFO=y
 CONFIG_ENVIRONMENT_VARIABLES=y
@@ -152,18 +162,18 @@ CONFIG_BAREBOX_MAX_PBL_SIZE=0xffffffff
 CONFIG_BAREBOX_MAX_BARE_INIT_SIZE=0xffffffff
 CONFIG_STACK_SIZE=0x8000
 CONFIG_MALLOC_SIZE=0x0
+CONFIG_SCRATCH_SIZE=0x8000
 CONFIG_MALLOC_ALIGNMENT=8
 # end of memory layout
 
 # CONFIG_EXPERIMENTAL is not set
-# CONFIG_MALLOC_DLMALLOC is not set
 CONFIG_MALLOC_TLSF=y
-CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_KALLSYMS=y
 CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_POWEROFF is not set
 # CONFIG_PANIC_HANG is not set
 CONFIG_PANIC_RESET=y
+# CONFIG_PANIC_TRAP is not set
 CONFIG_PROMPT="barebox:"
 CONFIG_BAUDRATE=115200
 CONFIG_CBSIZE=1024
@@ -177,7 +187,6 @@ CONFIG_HUSH_FANCY_PROMPT=y
 CONFIG_CMDLINE_EDITING=y
 CONFIG_AUTO_COMPLETE=y
 CONFIG_MENU=y
-# CONFIG_PASSWORD is not set
 CONFIG_ERRNO_MESSAGES=y
 CONFIG_TIMESTAMP=y
 CONFIG_BOOTM=y
@@ -186,13 +195,14 @@ CONFIG_BOOTM_SHOW_TYPE=y
 # CONFIG_BOOTM_VERBOSE is not set
 CONFIG_BOOTM_INITRD=y
 CONFIG_BOOTM_OFTREE=y
+# CONFIG_BOOTM_OFTREE_FALLBACK is not set
 # CONFIG_BOOTM_UIMAGE is not set
 # CONFIG_BOOTM_AIMAGE is not set
-# CONFIG_BOOTM_ELF is not set
 # CONFIG_BOOTM_FITIMAGE is not set
 CONFIG_BOOTM_OPTIONAL_SIGNED_IMAGES=y
 CONFIG_BLSPEC=y
 CONFIG_FLEXIBLE_BOOTARGS=y
+CONFIG_ROOTWAIT_BOOTARG=y
 CONFIG_MMCBLKDEV_ROOTARG=y
 CONFIG_BAREBOX_UPDATE=y
 CONFIG_SYSTEM_PARTITIONS=y
@@ -223,19 +233,18 @@ CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW=y
 CONFIG_DEFAULT_ENVIRONMENT_PATH="$(objtree)/.ptxdist-defaultenv"
 CONFIG_HAS_SCHED=y
 CONFIG_POLLER=y
+CONFIG_POLLER_WARN_OVERTIME=y
 CONFIG_BTHREAD=y
+# CONFIG_TLV is not set
 # CONFIG_STATE is not set
 # CONFIG_BOOTCHOOSER is not set
+CONFIG_BOOT_DEFAULTS=y
+CONFIG_BAREBOX_DT_2ND=y
 CONFIG_RESET_SOURCE=y
 # CONFIG_MACHINE_ID is not set
+# CONFIG_SERIAL_NUMBER_FIXUP_SYSTEMD_HOSTNAME is not set
 CONFIG_EXTERNAL_DTS_FRAGMENTS=""
-
-#
-# OP-TEE loading
-#
-# CONFIG_BOOTM_OPTEE is not set
-# CONFIG_PBL_OPTEE is not set
-# end of OP-TEE loading
+CONFIG_FILETYPE_STRINGS=y
 
 #
 # Android Fastboot
@@ -250,7 +259,6 @@ CONFIG_FASTBOOT_CMD_OEM=y
 #
 CONFIG_COMPILE_LOGLEVEL=6
 CONFIG_DEFAULT_LOGLEVEL=6
-CONFIG_HAS_DEBUG_LL=y
 # CONFIG_DEBUG_LL is not set
 CONFIG_DEBUG_AT91_UART_BASE=0xffffee00
 # CONFIG_DEBUG_INITCALLS is not set
@@ -262,7 +270,6 @@ CONFIG_DEBUG_AT91_UART_BASE=0xffffee00
 # CONFIG_PBL_BREAK is not set
 # CONFIG_PRINTF_FULL is not set
 # CONFIG_UBSAN is not set
-CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 # CONFIG_KASAN is not set
 # CONFIG_COMPILE_TEST is not set
@@ -306,7 +313,9 @@ CONFIG_CMD_MEMINFO=y
 # CONFIG_CMD_ARM_MMUINFO is not set
 # CONFIG_CMD_BLKSTATS is not set
 # CONFIG_CMD_REGULATOR is not set
+# CONFIG_CMD_VARINFO is not set
 CONFIG_CMD_VERSION=y
+# CONFIG_CMD_BFETCH is not set
 # CONFIG_CMD_MMC is not set
 # CONFIG_CMD_MMC_EXTCSD is not set
 # CONFIG_CMD_POLLER is not set
@@ -346,6 +355,7 @@ CONFIG_CMD_UMOUNT=y
 #
 # Environment
 #
+# CONFIG_CMD_CREATENV is not set
 CONFIG_CMD_NV=y
 CONFIG_CMD_EXPORT=y
 CONFIG_CMD_DEFAULTENV=y
@@ -371,6 +381,7 @@ CONFIG_CMD_DIRNAME=y
 CONFIG_CMD_FILETYPE=y
 CONFIG_CMD_LN=y
 CONFIG_CMD_LS=y
+CONFIG_CMD_TREE=y
 # CONFIG_CMD_STAT is not set
 CONFIG_CMD_MD5SUM=y
 CONFIG_CMD_MKDIR=y
@@ -381,6 +392,7 @@ CONFIG_CMD_RMDIR=y
 CONFIG_CMD_SHA1SUM=y
 # CONFIG_CMD_SHA224SUM is not set
 # CONFIG_CMD_SHA256SUM is not set
+# CONFIG_CMD_BASE64 is not set
 # CONFIG_CMD_SHA384SUM is not set
 # CONFIG_CMD_SHA512SUM is not set
 # CONFIG_CMD_FIPTOOL is not set
@@ -409,6 +421,7 @@ CONFIG_NET_CMD_IFUP=y
 # CONFIG_CMD_MIITOOL is not set
 CONFIG_CMD_PING=y
 # CONFIG_CMD_TFTP is not set
+# CONFIG_CMD_IP is not set
 CONFIG_CMD_IP_ROUTE_GET=y
 # CONFIG_CMD_ETHLOG is not set
 # end of Network
@@ -420,7 +433,6 @@ CONFIG_CMD_CLEAR=y
 CONFIG_CMD_ECHO=y
 CONFIG_CMD_ECHO_E=y
 CONFIG_CMD_EDIT=y
-# CONFIG_CMD_LOGIN is not set
 # CONFIG_CMD_MENU is not set
 # CONFIG_CMD_MENUTREE is not set
 CONFIG_CMD_READLINE=y
@@ -447,6 +459,7 @@ CONFIG_CMD_MW=y
 #
 # CONFIG_CMD_CLK is not set
 CONFIG_CMD_DETECT=y
+# CONFIG_CMD_TRUNCATE is not set
 # CONFIG_CMD_SYNC is not set
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
@@ -463,11 +476,17 @@ CONFIG_CMD_USBGADGET=y
 # end of Hardware manipulation
 
 #
+# Security
+#
+# CONFIG_CMD_BLOBGEN is not set
+# CONFIG_CMD_LOGIN is not set
+# end of Security
+
+#
 # Miscellaneous
 #
 # CONFIG_CMD_2048 is not set
 CONFIG_CMD_BAREBOX_UPDATE=y
-# CONFIG_CMD_BLOBGEN is not set
 # CONFIG_CMD_FIRMWARELOAD is not set
 # CONFIG_CMD_KALLSYMS is not set
 # CONFIG_CMD_OF_COMPATIBLE is not set
@@ -491,17 +510,18 @@ CONFIG_CMD_TIME=y
 # end of Commands
 
 CONFIG_NET=y
-CONFIG_NET_NFS=y
 # CONFIG_NET_NETCONSOLE is not set
 CONFIG_NET_RESOLV=y
 CONFIG_NET_IFUP=y
 CONFIG_NET_DHCP=y
 # CONFIG_NET_SNTP is not set
 CONFIG_NET_FASTBOOT=y
+# CONFIG_NET_9P is not set
 
 #
 # Drivers
 #
+# CONFIG_DEEP_PROBE_DEFAULT is not set
 CONFIG_REGMAP_FORMATTED=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
@@ -554,6 +574,7 @@ CONFIG_DRIVER_NET_MICREL=y
 #
 # MII PHY device drivers
 #
+# CONFIG_ADIN_PHY is not set
 # CONFIG_AR8327N_PHY is not set
 # CONFIG_AT803X_PHY is not set
 # CONFIG_DAVICOM_PHY is not set
@@ -676,6 +697,7 @@ CONFIG_MTD_UBI_BEB_LIMIT=20
 # CONFIG_MTD_UBI_GENERAL_EXTRA_CHECKS is not set
 CONFIG_DISK=y
 CONFIG_DISK_WRITE=y
+# CONFIG_DM_BLK is not set
 
 #
 # drive types
@@ -703,7 +725,7 @@ CONFIG_USB_OHCI_AT91=y
 # USB Miscellaneous drivers
 #
 # CONFIG_USB_HUB_USB251XB is not set
-# CONFIG_USB_ONBOARD_HUB is not set
+# CONFIG_USB_ONBOARD_DEV is not set
 # CONFIG_TYPEC_TUSB320 is not set
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DUALSPEED=y
@@ -727,12 +749,15 @@ CONFIG_MCI=y
 # --- Feature list ---
 #
 # CONFIG_MCI_TUNING is not set
+CONFIG_MCI_STARTUP_NONE=y
+# CONFIG_MCI_STARTUP_NONREMOVABLE is not set
 # CONFIG_MCI_STARTUP is not set
 CONFIG_MCI_INFO=y
 CONFIG_MCI_WRITE=y
 CONFIG_MCI_ERASE=y
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 # CONFIG_MCI_MMC_GPP_PARTITIONS is not set
+# CONFIG_MCI_MMC_RPMB is not set
 
 #
 # --- MCI host drivers ---
@@ -747,6 +772,7 @@ CONFIG_MCI_ATMEL_SDHCI=y
 # CONFIG_MCI_ARASAN is not set
 # CONFIG_MCI_AM654 is not set
 # CONFIG_MCI_SPI is not set
+# CONFIG_MMC_CADENCE_SDHCI is not set
 CONFIG_MCI_ATMEL_PBL=y
 CONFIG_HAVE_CLK=y
 CONFIG_CLKDEV_LOOKUP=y
@@ -795,7 +821,7 @@ CONFIG_MFD_ATMEL_SMC=y
 # CONFIG_SRAM is not set
 CONFIG_DEV_MEM=y
 # CONFIG_UBOOTVAR is not set
-# CONFIG_STORAGE_BY_UUID is not set
+# CONFIG_STORAGE_BY_ALIAS is not set
 # end of Misc devices
 
 CONFIG_LED=y
@@ -896,6 +922,15 @@ CONFIG_REGULATOR_FIXED=y
 # end of Remoteproc drivers
 
 # CONFIG_RESET_CONTROLLER is not set
+CONFIG_HW_HAS_PCI=y
+
+#
+# PCI bus options
+#
+# CONFIG_PCI is not set
+# CONFIG_PCI_ECAM_GENERIC is not set
+# end of PCI bus options
+
 # CONFIG_RTC_CLASS is not set
 
 #
@@ -977,6 +1012,7 @@ CONFIG_VIRTIO_MENU=y
 CONFIG_FS=y
 CONFIG_FS_LEGACY=y
 CONFIG_FS_WRITABLE=y
+CONFIG_NETFS_SUPPORT=y
 
 #
 # Some selected filesystems still use the legacy FS API.
@@ -1025,7 +1061,92 @@ CONFIG_FS_UBIFS_COMPRESSION_ZSTD=y
 #
 # ZSTD support disabled
 #
+# CONFIG_FS_QEMU_FW_CFG is not set
 # end of Filesystem support
+
+#
+# Security options
+#
+CONFIG_INSECURE=y
+# CONFIG_SECURITY_POLICY is not set
+# CONFIG_PASSWORD is not set
+# CONFIG_CRYPTO_KEYSTORE is not set
+# CONFIG_BLOBGEN is not set
+
+#
+# OP-TEE loading
+#
+# CONFIG_BOOTM_OPTEE is not set
+# CONFIG_PBL_OPTEE is not set
+# end of OP-TEE loading
+
+#
+# Hardening options
+#
+# CONFIG_BUG_ON_DATA_CORRUPTION is not set
+
+#
+# Memory initialization
+#
+CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
+# CONFIG_INIT_STACK_NONE is not set
+# CONFIG_INIT_STACK_ALL_PATTERN is not set
+CONFIG_INIT_STACK_ALL_ZERO=y
+# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
+# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
+CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
+# CONFIG_ZERO_CALL_USED_REGS is not set
+# end of Memory initialization
+
+#
+# Buffer overflow protection
+#
+CONFIG_STACK_GUARD_PAGE=y
+CONFIG_STACKPROTECTOR_NONE=y
+# CONFIG_STACKPROTECTOR_STRONG is not set
+CONFIG_PBL_STACKPROTECTOR_NONE=y
+# CONFIG_PBL_STACKPROTECTOR_STRONG is not set
+# end of Buffer overflow protection
+# end of Hardening options
+
+CONFIG_HAS_INSECURE_DEFAULTS=y
+
+#
+# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
+#
+
+#
+# that some of the configured options have potentially insecure defaults.
+#
+
+#
+# Extra care needs to be taken in secure booted systems.
+#
+# end of Security options
+
+#
+# Crypto support
+#
+CONFIG_CRC32=y
+CONFIG_DIGEST=y
+CONFIG_HAVE_DIGEST_MD5=y
+CONFIG_HAVE_DIGEST_SHA1=y
+# CONFIG_DIGEST_CRC32_GENERIC is not set
+CONFIG_DIGEST_MD5_GENERIC=y
+CONFIG_DIGEST_SHA1_GENERIC=y
+# CONFIG_DIGEST_SHA224_GENERIC is not set
+# CONFIG_DIGEST_SHA256_GENERIC is not set
+# CONFIG_DIGEST_SHA384_GENERIC is not set
+# CONFIG_DIGEST_SHA512_GENERIC is not set
+# CONFIG_DIGEST_HMAC_GENERIC is not set
+CONFIG_DIGEST_SHA1_ARM=y
+# CONFIG_DIGEST_SHA256_ARM is not set
+# CONFIG_CRYPTO_RSA is not set
+# CONFIG_CRYPTO_ECDSA is not set
+# CONFIG_CRYPTO_BUILTIN_KEYS is not set
+# end of Crypto support
 
 #
 # Library routines
@@ -1053,6 +1174,7 @@ CONFIG_LIBFDT=y
 # CONFIG_ALLOW_PRNG_FALLBACK is not set
 # CONFIG_CRC_CCITT is not set
 # CONFIG_CRC8 is not set
+# CONFIG_CRC16 is not set
 
 #
 # Library gui routines
@@ -1061,74 +1183,8 @@ CONFIG_LIBFDT=y
 
 CONFIG_PRINTF_UUID=y
 CONFIG_NLS=y
-# CONFIG_BLOBGEN is not set
-CONFIG_ARCH_HAS_STACK_DUMP=y
-CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
-CONFIG_ARCH_HAS_ZERO_PAGE=y
 CONFIG_GENERIC_ALLOCATOR=y
 # end of Library routines
-
-#
-# Hardening options
-#
-
-#
-# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
-#
-
-#
-# that some of the configured options have potentially insecure defaults.
-#
-
-#
-# Extra care needs to be in secure booted systems.
-#
-# CONFIG_BUG_ON_DATA_CORRUPTION is not set
-
-#
-# Memory initialization
-#
-CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
-CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
-CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
-# CONFIG_INIT_STACK_NONE is not set
-# CONFIG_INIT_STACK_ALL_PATTERN is not set
-CONFIG_INIT_STACK_ALL_ZERO=y
-# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
-# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
-CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
-# CONFIG_ZERO_CALL_USED_REGS is not set
-# end of Memory initialization
-
-CONFIG_STACK_GUARD_PAGE=y
-CONFIG_STACKPROTECTOR_NONE=y
-# CONFIG_STACKPROTECTOR_STRONG is not set
-CONFIG_PBL_STACKPROTECTOR_NONE=y
-# CONFIG_PBL_STACKPROTECTOR_STRONG is not set
-# end of Hardening options
-
-#
-# Crypto support
-#
-CONFIG_CRC32=y
-CONFIG_DIGEST=y
-CONFIG_HAVE_DIGEST_MD5=y
-CONFIG_HAVE_DIGEST_SHA1=y
-# CONFIG_DIGEST_CRC32_GENERIC is not set
-CONFIG_DIGEST_MD5_GENERIC=y
-CONFIG_DIGEST_SHA1_GENERIC=y
-# CONFIG_DIGEST_SHA224_GENERIC is not set
-# CONFIG_DIGEST_SHA256_GENERIC is not set
-# CONFIG_DIGEST_SHA384_GENERIC is not set
-# CONFIG_DIGEST_SHA512_GENERIC is not set
-# CONFIG_DIGEST_HMAC_GENERIC is not set
-CONFIG_DIGEST_SHA1_ARM=y
-# CONFIG_DIGEST_SHA256_ARM is not set
-# CONFIG_CRYPTO_RSA is not set
-# CONFIG_CRYPTO_ECDSA is not set
-# CONFIG_CRYPTO_BUILTIN_KEYS is not set
-# CONFIG_CRYPTO_KEYSTORE is not set
-# end of Crypto support
 
 #
 # Firmware files
