--- a/configs/platform-v8a/barebox-r5.config
+++ b/configs/platform-v8a/barebox-r5.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.07.0 Configuration
+# Barebox/arm 2025.11.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -27,6 +27,7 @@ CONFIG_ARCH_K3=y
 # CONFIG_ARCH_LAYERSCAPE is not set
 # CONFIG_ARCH_OMAP_MULTI is not set
 # CONFIG_ARCH_ROCKCHIP is not set
+# CONFIG_ARCH_SAMSUNG is not set
 # CONFIG_ARCH_STM32MP is not set
 # CONFIG_ARCH_VERSATILE is not set
 # CONFIG_ARCH_VEXPRESS is not set
@@ -53,6 +54,8 @@ CONFIG_MACH_AM625_SK=y
 CONFIG_MACH_BEAGLEPLAY=y
 # CONFIG_MACH_AM62LX_EVM is not set
 # CONFIG_ARCH_K3_AUTHENTICATE_IMAGE is not set
+CONFIG_ARCH_K3_SIGNING_KEY_TI_DEVEL=y
+# CONFIG_ARCH_K3_SIGNING_KEY_CUSTOM is not set
 # end of K3 boards
 
 CONFIG_AEABI=y
@@ -67,7 +70,9 @@ CONFIG_32BIT=y
 #
 CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_ARM_EXCEPTIONS=y
+# CONFIG_ARM_EXCEPTIONS_PBL is not set
 # CONFIG_ARM_UNWIND is not set
+CONFIG_ARM_MMU_PERMISSIONS=y
 # CONFIG_ARM_SEMIHOSTING is not set
 # CONFIG_ARM_PSCI_CLIENT is not set
 # end of ARM specific settings
@@ -78,6 +83,7 @@ CONFIG_ARM_EXCEPTIONS=y
 # CONFIG_BOARD_GENERIC_DT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_DMA_WRITE_COMBINE=y
 CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
 CONFIG_ARCH_HAS_ZERO_PAGE=y
 CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
@@ -99,10 +105,9 @@ CONFIG_FILETYPE=y
 #
 # General Settings
 #
+CONFIG_NAME=""
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_HAS_INSECURE_DEFAULTS=y
-CONFIG_INSECURE=y
 CONFIG_BANNER=y
 # CONFIG_MEMINFO is not set
 CONFIG_ENVIRONMENT_VARIABLES=y
@@ -142,6 +147,7 @@ CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_POWEROFF is not set
 # CONFIG_PANIC_HANG is not set
 CONFIG_PANIC_RESET=y
+# CONFIG_PANIC_TRAP is not set
 CONFIG_PROMPT="MLO>"
 CONFIG_BAUDRATE=115200
 CONFIG_SIMPLE_READLINE=y
@@ -151,7 +157,6 @@ CONFIG_FIRMWARE=y
 # CONFIG_SHELL_SIMPLE is not set
 CONFIG_SHELL_NONE=y
 # CONFIG_GLOB is not set
-# CONFIG_PASSWORD is not set
 # CONFIG_ERRNO_MESSAGES is not set
 # CONFIG_BOOTM is not set
 CONFIG_ELF=y
@@ -177,6 +182,7 @@ CONFIG_PARTITION_DISK_DOS=y
 CONFIG_DEFAULT_COMPRESSION_NONE=y
 CONFIG_HAS_SCHED=y
 CONFIG_POLLER=y
+CONFIG_POLLER_WARN_OVERTIME=y
 CONFIG_BTHREAD=y
 # CONFIG_TLV is not set
 # CONFIG_STATE is not set
@@ -184,13 +190,6 @@ CONFIG_BTHREAD=y
 # CONFIG_BOOT_DEFAULTS is not set
 # CONFIG_BAREBOX_DT_2ND is not set
 CONFIG_EXTERNAL_DTS_FRAGMENTS=""
-
-#
-# OP-TEE loading
-#
-# CONFIG_PBL_OPTEE is not set
-# end of OP-TEE loading
-
 CONFIG_FILETYPE_STRINGS=y
 # end of General Settings
 
@@ -276,6 +275,7 @@ CONFIG_I2C_OMAP=y
 # CONFIG_MTD is not set
 CONFIG_DISK=y
 # CONFIG_DISK_WRITE is not set
+# CONFIG_DM_BLK is not set
 
 #
 # drive types
@@ -329,6 +329,8 @@ CONFIG_MCI=y
 # --- Feature list ---
 #
 # CONFIG_MCI_TUNING is not set
+CONFIG_MCI_STARTUP_NONE=y
+# CONFIG_MCI_STARTUP_NONREMOVABLE is not set
 # CONFIG_MCI_STARTUP is not set
 # CONFIG_MCI_WRITE is not set
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
@@ -344,6 +346,7 @@ CONFIG_MCI_MMC_RPMB=y
 # CONFIG_MCI_ROCKCHIP_DWCMSHC is not set
 # CONFIG_MCI_ARASAN is not set
 CONFIG_MCI_AM654=y
+# CONFIG_MMC_CADENCE_SDHCI is not set
 CONFIG_HAVE_CLK=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_COMMON_CLK=y
@@ -608,52 +611,22 @@ CONFIG_FS_FAT_LFN=y
 # end of Filesystem support
 
 #
-# Library routines
+# Security options
 #
-CONFIG_UNCOMPRESS=y
-# CONFIG_ZLIB is not set
-# CONFIG_BZLIB is not set
-# CONFIG_LZ4_DECOMPRESS is not set
-# CONFIG_ZSTD_DECOMPRESS is not set
-CONFIG_XZ_DECOMPRESS=y
-CONFIG_XZ_DEC_X86=y
-CONFIG_XZ_DEC_POWERPC=y
-CONFIG_XZ_DEC_IA64=y
-CONFIG_XZ_DEC_ARM=y
-CONFIG_XZ_DEC_ARMTHUMB=y
-CONFIG_XZ_DEC_SPARC=y
-CONFIG_XZ_DEC_ARM64=y
-# CONFIG_BASE64 is not set
-# CONFIG_LZO_DECOMPRESS is not set
-CONFIG_FIP=y
-# CONFIG_ALLOW_PRNG_FALLBACK is not set
-# CONFIG_CRC_CCITT is not set
-# CONFIG_CRC8 is not set
-
-#
-# Library gui routines
-#
-# end of Library gui routines
-
-# CONFIG_BOOTSTRAP is not set
-CONFIG_NLS=y
+CONFIG_INSECURE=y
+# CONFIG_SECURITY_POLICY is not set
+# CONFIG_PASSWORD is not set
+# CONFIG_CRYPTO_KEYSTORE is not set
 # CONFIG_BLOBGEN is not set
-# end of Library routines
+
+#
+# OP-TEE loading
+#
+# CONFIG_PBL_OPTEE is not set
+# end of OP-TEE loading
 
 #
 # Hardening options
-#
-
-#
-# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
-#
-
-#
-# that some of the configured options have potentially insecure defaults.
-#
-
-#
-# Extra care needs to be taken in secure booted systems.
 #
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 
@@ -682,6 +655,21 @@ CONFIG_PBL_STACKPROTECTOR_NONE=y
 # end of Buffer overflow protection
 # end of Hardening options
 
+CONFIG_HAS_INSECURE_DEFAULTS=y
+
+#
+# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
+#
+
+#
+# that some of the configured options have potentially insecure defaults.
+#
+
+#
+# Extra care needs to be taken in secure booted systems.
+#
+# end of Security options
+
 #
 # Crypto support
 #
@@ -690,8 +678,40 @@ CONFIG_CRC32=y
 # CONFIG_CRYPTO_RSA is not set
 # CONFIG_CRYPTO_ECDSA is not set
 # CONFIG_CRYPTO_BUILTIN_KEYS is not set
-# CONFIG_CRYPTO_KEYSTORE is not set
 # end of Crypto support
+
+#
+# Library routines
+#
+CONFIG_UNCOMPRESS=y
+# CONFIG_ZLIB is not set
+# CONFIG_BZLIB is not set
+# CONFIG_LZ4_DECOMPRESS is not set
+# CONFIG_ZSTD_DECOMPRESS is not set
+CONFIG_XZ_DECOMPRESS=y
+CONFIG_XZ_DEC_X86=y
+CONFIG_XZ_DEC_POWERPC=y
+CONFIG_XZ_DEC_IA64=y
+CONFIG_XZ_DEC_ARM=y
+CONFIG_XZ_DEC_ARMTHUMB=y
+CONFIG_XZ_DEC_SPARC=y
+CONFIG_XZ_DEC_ARM64=y
+# CONFIG_BASE64 is not set
+# CONFIG_LZO_DECOMPRESS is not set
+CONFIG_FIP=y
+# CONFIG_ALLOW_PRNG_FALLBACK is not set
+# CONFIG_CRC_CCITT is not set
+# CONFIG_CRC8 is not set
+# CONFIG_CRC16 is not set
+
+#
+# Library gui routines
+#
+# end of Library gui routines
+
+# CONFIG_BOOTSTRAP is not set
+CONFIG_NLS=y
+# end of Library routines
 
 #
 # Firmware files
